# rust-redis-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: commands.rs  config.rs  lib.rs  main.rs  redis.rs
