[package]
name = "redis-cli"
version = "0.2.1"
edition = "2021"
authors = ["Aldeesh <aldeerayan@gmail.com>"]
description = "Basic redis client cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
redis = "0.25.3"
